# fat-tail-backtesting

./: .gitignore  README.md  combined_galton_scene.py  convex.ipynb  fat_tails.py  galton_board.py  lognormal_galton_board.py  pareto_galton_board.py  pyproject.toml
p5/: sketch.js
